update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -249,7 +249,8 @@
   - name: "10:00 - 10:30 Logistics (video)"
   - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) (private video) "
   - name: "12:00 - 12:30 Break"
-  - name: "12:30 - 4:30 Group and Individual Project Presentations (*Zoom*) (video)"
-  - name: "4:30 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) (video)"
+  - name: "12:30 - 12:50 Overview of Group and Individual Project Presentations"
+  - name: "12:50 - 4:20 Group and Individual Project Presentations (*Zoom*) (video)"
+  - name: "4:20 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) (video)"
   - name: "5:00 - 5:15 Break"
   - name: "5:15 - 5:45 SICSS-Howard/Mathematica Final Debrief and conclusion"
