--- a/_data/2021/taiwan/participants.yml
+++ b/_data/2021/taiwan/participants.yml
@@ -61,3 +61,13 @@
 - name: Yu-Neng Chuang
   bio: "My research interests include recommender systems via modeling user behaviors with sparse textual data. I am also interested in applying graph analytics to several domains, e.g., social network analysis. Recently, I am working on using recommender systems for e-commerce services. "
   image: /assets/images/1Z1grHusaZNl0Ii1XwDRpHtghNIqMNTU5.jpeg
+- name: Jeffery Shih-Chieh Wang
+  bio: "Jeffery Shih-Chieh Wang is a PhD student in the National Science Foundation Research Traineeship (NRT) Interdisciplinary Duo PhD Program in Informatics (Complex Networks and Systems Track) and Political Science (International Relations) at Indiana University Bloomington. He is interested in collective behavior, international politics, and international cooperation. Currently he uses social network analysis and inferential network models to study social mechanisms that drive states to cooperate in institutionalized environments (i.e., intergovernmental organizations). In the future, he hopes to apply more computational methods such as agent-based modeling and machine learning methods to further study collective behavior in institutionalized structures."
+  image: /assets/images/jefferyshihchiehwang.png
+- name: Kung-Chen (KC) Chen 
+  bio: "I am Kung-Chen Chen (KC), a doctoral student in the Department of Government and Politics at the University of Maryland, College Park. My research focuses on how politics shapes the landscape of global trade – especially in the realm of trade in services and the political dynamics of the WTO. I aim to bring in new insights to enrich our understanding of trade politics based on the protection-for-sale paradigm."
+  image: /assets/images/kcchen.png
+- name: Yung Chun Chen
+  bio: "Multidisciplinary data analyst. Specialized in information operation studies. Currently applying for graduate school in quantitative research."
+  image: /assets/images/yungchunchen.png
+  
