update howard people page

--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -30,7 +30,7 @@ keynote:
 closing:
   title: Closing Plenary Speaker 
   people:
-    - name: Paul Decker
+    - name: Paul Decker, Ph.D.
       image: /assets/images/PaulDecker.jpeg
       bio: "Paul Decker is a nationally recognized expert in policy research, data analytics, education, and labor policy. For three decades, he has been working to improve public well-being through the use of evidence to improve programs and policy. As president and CEO of Mathematica, Decker sets the company’s vision and strategy, oversees its operation and management, and shapes its values and standards. During his tenure as CEO, Decker has expanded and diversified the company’s operations and maintained its commitment to rigor and objectivity in new and evolving areas of research and analysis. Decker is Associate Editor for the Journal of Policy Analysis and Management and a past president of the Association for Public Policy Analysis and Management, where he also co-chaired the organization’s strategic planning committee and served on the policy council. He serves as a trustee and chair for the Committee for Economic Development’s Subcommittee on Workforce Issues. Decker writes and speaks regularly on trends in the policy research field, chairs the government relations committee of CEO Connection, and has testified before Congress, served as an expert adviser to both the U.S. and Canadian governments, and published widely in peer-reviewed journals. Decker holds a Ph.D. in economics from the Johns Hopkins University and serves as chair of development on the board of advisers of the Thomas Jefferson Public Policy Program at the College of William and Mary, his undergraduate alma mater."
       website: https://www.mathematica.org/staff/paul-decker
