update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -247,7 +247,7 @@
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:30 Logistics (video)"
-  - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) (private video) "
+  - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) [(video)](https://youtu.be/ML2LOttMGes)"
   - name: "12:00 - 12:30 Break"
   - name: "12:30 - 12:50 Overview of Group and Individual Project Presentations"
   - name: "12:50 - 4:20 Group and Individual Project Presentations (*Zoom*) (video)"
