--- a/_data/2021/taiwan/schedule.yml
+++ b/_data/2021/taiwan/schedule.yml
@@ -13,7 +13,7 @@
 - date: 2021-06-29
   name: API & Automated Text Analysis
   events:
-    - name: "9:30 - 10:35 Watch [2020 SICSS Festival talk on computational and digital demography](https://www.youtube.com/watch?v=BueR-DPy484&list=PL9UNgBC7ODr6eZkwB6W0QSzpDs46E8WPN), followed by group discussion" 
+    - name: "9:30 - 10:35 Watch [2020 SICSS Festival talk on computational and digital demography](https://www.youtube.com/watch?v=BueR-DPy484&list=PL9UNgBC7ODr6eZkwB6W0QSzpDs46E8WPN), followed by group discussion [Day 2 Slides](https://docs.google.com/presentation/d/1xh2Ps4Po2j97pTLhzJHPbbkMV_Ibvpiqm8KFXTN0Ly0/edit#slide=id.p)" 
     - name: "10:55 - 12:00 Application Programming Interfaces Group Activity"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
     - name: "13:00 - 14:30 An Introduction to Text Analysis Text Analysis Basics"
