--- a/_data/2021/los_angeles/participants.yml
+++ b/_data/2021/los_angeles/participants.yml
@@ -1,6 +1,6 @@
 - name: Lily An
   image: /assets/images/Lily_An_image - Lily An.jpg
-  bio: I am interested in improving the use and interpretation of educational measures, such as student test scores, in causal inference methods. I hope to study how educational agencies can best deploy the administrative, achievement, and student outcome data that they have to identify which students need what targeted supports across varied contexts.
+  bio: I am a PhD student in Education Policy and Program Evaluation at the Harvard Graduate School of Education. I am interested in improving the use and interpretation of educational measures, such as student test scores, in causal inference methods. I hope to study how educational agencies can best deploy the administrative, achievement, and student outcome data that they have to identify which students need what targeted supports across varied contexts.
 
 - name: Colin Bernatzsky
   image: /assets/images/colin_bernatzky_image - Colin Bernatzky.jpg
