update howard people page

--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -162,7 +162,7 @@ participants:
   
    - name: Rashun Miles
      image: /assets/images/RashunMiles.jpeg
-     bio: "Rashun Miles is a Ph.D. student in social welfare at the University of Mississippi. She has a MA from Columbia University and a MSW from the University of Michigan. His research integrates urban complex systems and feminist pedagogy (ethics of care) to address compassion fatigue among helping professionals."
+     bio: "Rashun Miles is a Ph.D. student in social welfare at the University of Mississippi. He has a MA from Columbia University and a MSW from the University of Michigan. His research integrates urban complex systems and feminist pedagogy (ethics of care) to address compassion fatigue among helping professionals."
     
    - name: Yondu Mori
      image: /assets/images/YonduMori.jpeg
