--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -213,7 +213,7 @@
   name: "Day 8: Work on group projects and participate in SICSS Festival"
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-  - name: "10:00 - 10:30 Logistics (*Zoom*) (video)"
+  - name: "10:00 - 10:30 Logistics (*Zoom*) [(video)](https://youtu.be/aVgiNC_KByw)"
   - name: "10:30 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video not available)
      
@@ -230,17 +230,17 @@
      - Shaun N. Stevenson, Research Associate"
      
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/IoOQZUa_Akw) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/IoOQZUa_Akw) [(Q&A)](https://youtu.be/H6HABb6uOs0) (slides)"
 
 - date: 2021-06-24
   name: "Day 9: Work on group projects and participate in SICSS Festival"
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-  - name: "10:00 - 10:30 Logistics (*Zoom*) (video)"
+  - name: "10:00 - 10:30 Logistics (*Zoom*) [(video)](https://youtu.be/C2Yf6D58ipU)"
   - name: "10:30 - 12:00 Work on group projects"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) [(video)](https://youtu.be/q1MXHf5x7Nk) (Q&A)" 
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) [(video)](https://youtu.be/q1MXHf5x7Nk) [(Q&A)](https://youtu.be/hwM9lSLEKds)" 
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/sZsjzksiD2M) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/sZsjzksiD2M) [(Q&A)](https://youtu.be/Up1DrzzhDzw) (slides)"
 
 - date: 2021-06-25
   name: "Day 10: Present group projects and participate in SICSS Festival"
