--- a/_data/2021/taiwan/schedule.yml
+++ b/_data/2021/taiwan/schedule.yml
@@ -23,10 +23,10 @@
 - date: 2021-06-30
   name: Building Crawlers
   events:
-    - name: "9:30 - 10:35 Screen scraping/crawler exercise - brainstorming" 
+    - name: "9:30 - 10:35 Screen scraping/crawler exercise - brainstorming [Day 3 Slides](https://github.com/compsocialscience/summer-institute/raw/master/2021/materials/taiwan/06:29:2021%20SICSS%20Day%20Three%20Ed.pptx)" 
     - name: "10:55 - 12:00 Screen scraping/crawler exercise - prototyping"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 15:00 Speaker Session: Hsuan-Wei Lee"
+    - name: "13:00 - 15:00 Speaker Session: Hsuan-Wei Lee [slides](https://github.com/compsocialscience/summer-institute/raw/master/2021/materials/taiwan/LeeHsuanWei_SICSS_talk.pdf)"
     - name: "15:00 - 15:15 Debrief and Logistics"
     
 - date: 2021-07-01
