--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -59,7 +59,7 @@
   name: Text Analysis + Unsupervised Machine-Learning
   events:
     - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
-    - name: "10:15 - 11:30 Lecture: Word Embedding (*In Zoom full group*)"
+    - name: "10:15 - 11:30 Lecture: Word Embedding + Topic Modeling (*In Zoom full group*)"
     - name: "11:30 - 11:45 Small Group Discussions + Exercise (*In Zoom break-out room*)"
     - name: "11:45 - 1:00 Break"
     - name: "1:00 - 1:30 Guest Speaker: Savannah Larimore (SICSS-UW 2018) (*In Zoom full group*)"
@@ -73,7 +73,7 @@
     - name: "10:30 - 11:45 Text Analysis Exercise (*In Zoom break-out room*)"
     - name: "11:45 - 1:00 Break"
     - name: "1:00 - 2:45 Project Time (*In Zoom break-out rooms*)"
-    - name: "3:00 - 4:00 Lecture: Text Analysis (*In Zoom full group*)"
+    - name: "3:00 - 4:00 Lecture: Unsupervised Machine-Learning (*In Zoom full group*)"
  
  
 - date: 2021-06-30
