--- a/_data/2021/istanbul/people.yml
+++ b/_data/2021/istanbul/people.yml
@@ -193,7 +193,7 @@ participants:
         website:
 
       - name: Oğuzhan	İzmir
-        image: /assets/images/OguzhanIzmir.png
+        image: assets/images/OguzhanIzmir.jpg
         bio: “Oğuzhan İzmir is a master’s student in International Relations. He is interested in the use of computational methods in Border Studies.”
         website:
 
