--- a/_data/2021/los_angeles/participants.yml
+++ b/_data/2021/los_angeles/participants.yml
@@ -2,6 +2,10 @@
   image: /assets/images/Lily_An_image - Lily An.jpg
   bio: I am a PhD student in Education Policy and Program Evaluation at the Harvard Graduate School of Education. I am interested in improving the use and interpretation of educational measures, such as student test scores, in causal inference methods. I hope to study how educational agencies can best deploy the administrative, achievement, and student outcome data that they have to identify which students need what targeted supports across varied contexts.
 
+- name: Carolina Aragão
+  image: /assets/images/Carolina_Aragao_image - M C Mota Pereira Aragao.jpg
+  bio: Carolina Aragão is a PhD candidate in the Department of Sociology and a Population Research Center graduate trainee at the University of Texas at Austin. Her interests are at the intersection of family demography, race, and stratification in Latin America and the United States.
+
 - name: Colin Bernatzsky
   image: /assets/images/colin_bernatzky_image - Colin Bernatzky.jpg
   bio: Colin Bernatzky is a Ph.D. candidate in Sociology at the University of California, Irvine. His dissertation draws on ethnography, semi-structured interviews, and survey data to examine the sociocultural determinants of vaccine skepticism, with a particular focus on the interactional dynamics, group norms and metaphors that foster and sustain opposition to vaccination. In collaborative projects, he has studied the effects of exposure to right-wing virtual extremism, perceptions of social movement framing and source credibility, and the causes, costs and consequences of homelessness in Orange County.
