--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -246,11 +246,11 @@
   name: "Day 10: Present group projects and participate in SICSS Festival"
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-  - name: "10:00 - 10:30 Logistics (video)"
+  - name: "10:00 - 10:30 Logistics [(video)](https://youtu.be/QE4H1C6a6hw)"
   - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) [(video)](https://youtu.be/ML2LOttMGes)"
   - name: "12:00 - 12:30 Break"
   - name: "12:30 - 12:50 Overview of Group and Individual Project Presentations"
-  - name: "12:50 - 4:20 Group and Individual Project Presentations (*Zoom*) (video)"
-  - name: "4:20 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) (video)"
+  - name: "12:50 - 4:20 Group and Individual Project Presentations (*Zoom*)"
+  - name: "4:20 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) [(video)](https://youtu.be/l8qH8HuhOqk)"
   - name: "5:00 - 5:15 Break"
   - name: "5:15 - 5:45 SICSS-Howard/Mathematica Final Debrief and conclusion"
