--- a/_data/2021/taiwan/schedule.yml
+++ b/_data/2021/taiwan/schedule.yml
@@ -32,8 +32,8 @@
 - date: 2021-07-01
   name: Surveys in the Digital Age
   events:
-    - name: "9:30 - 10:35 Probability and Non-Probability Sampling; [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md)" 
-    - name: "10:55 - 12:00 Probability and Non-Probability Sampling; [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md)"
+    - name: "9:30 - 10:35 Probability and Non-Probability Sampling; [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md), [Day 4 slides](https://docs.google.com/presentation/d/1sSAAkNyaXSCWTka03B0pKrguNXNAZcnYOVAyS6I_guA/edit#slide=id.ge16476676c_0_35)" 
+    - name: "10:55 - 12:00 Probability and Non-Probability Sampling"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
     - name: "13:00 - 15:00 Speaker Session: Christy Pu"
     - name: "15:00 - 15:15 Debrief and Logistics"
