--- a/_data/2021/taiwan/schedule.yml
+++ b/_data/2021/taiwan/schedule.yml
@@ -41,7 +41,7 @@
 - date: 2021-07-02
   name: Experiment & Research Pairing Activity
   events:
-    - name: "9:30 - 10:35 Group exercise brainstorming (Lesson Plan)[https://docs.google.com/document/d/1qAS5h2lhvElQW5HPUbGtX4Tl8jX6QskqiUd_VSNm2yE/edit]" 
+    - name: "9:30 - 10:35 Group exercise brainstorming [Lesson Plan](https://docs.google.com/document/d/1qAS5h2lhvElQW5HPUbGtX4Tl8jX6QskqiUd_VSNm2yE/edit)" 
     - name: "10:55 - 12:00 Flash Talk (7 min + 7 min Q&A) from Participants"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
     - name: "13:00 - 14:00 Research Pairing Activity 1 [slides](https://sicss.io/2021/materials/research-speed-dating/Speed_Dating_2021.html#/11)"
