--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -198,7 +198,7 @@ participants:
     
 teaching_assistants:
   title: Teaching Assistants
-
+  people:
   - name: Shengchun Huang
     image: /assets/images/Shengchun_Huang.jpeg
     bio: "Shengchun Huang is a doctoral student at the Annenberg School for Communication at the University of Pennsylvania. She is is interested in digital news consumption, algorithm driven aggregators/platforms, and social effects in the high-choice media environment. Before joining Annenberg, she received her B.A. degree in communication from Renmin University of China and M.A. degree in journalism and communications from Tsinghua University."
