--- a/_data/2021/taiwan/participants.yml
+++ b/_data/2021/taiwan/participants.yml
@@ -70,4 +70,7 @@
 - name: Yung Chun Chen
   bio: "Multidisciplinary data analyst. Specialized in information operation studies. Currently applying for graduate school in quantitative research."
   image: /assets/images/yungchunchen.png
+- name: Yahui Chang
+  bio: "Yahui Chang is a PhD student in social psychology at University at Buffalo. She is broadly interested in peoples’ fundamental needs, such as need for affiliation and need for meaning. She investigates how social influence affects the way people process persuasive information, and how they further enhance their identity and well-being."
+  image: /assets/images/1C5kzXVVMpJKuhaNXUVemL_N2IGyOIdYt.jpeg
   
