--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -36,7 +36,7 @@
   name: Automated Text Analysis and Networks Science
   events:
     - name: "12:00 - 12:15 Logistics and introduction to group exercise"
-    - name: "12:15 - 14:00 Group Exercise based on the pre-recorded lectures [(Day 3)](https://sicss.io/curriculum). [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/hse/day3text-hse.html)"
+    - name: "12:15 - 14:00 Group Exercise based on the pre-recorded lectures [(Day 3)](https://sicss.io/curriculum). [Lesson plan (participants)](https://sicss.io/2021/materials/hse/day3text-hse.html)"
     - name: "14:00 - 14:45 Break"
     - name: "14:45 - 15:15 Whole group debrief about the group exercise"
     - name: "15:15 - 15:45 Break"
