--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -17,7 +17,7 @@
   events:
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Machine learning and networks"
-    - name: "21:00 - 22:00 Subhayan Mukerjee speaks at SICSS Beijing + Q&A (talk open to participants only)"
+    - name: "21:00 - 22:00 Subhayan Mukerjee speaks at SICSS Beijing + Q&A (talk open to participants only) [(video)](https://mit.zoom.us/rec/share/NFMZFMzwvlUqNad_-udqlcHUrW5QCxExUiD-yn0PkCd-mM6aqtccY143ZiOa5UUG.Y6Wce6g_o8AstXWZ?startTime=1623762366000)"
 
 - date: 2021-06-16
   name: ""
