--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -197,7 +197,7 @@
   - name: "2:30 - 3:30 Round 7-12 (ten minutes each) (*Zoom*)"
   - name: "3:30 - 3:45 Break"
   - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*) [(video)](https://youtu.be/N_uUx66jyHs)"
-  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) [(Q&A)](https://youtu.be/zfBwenC3miQ)"
+  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video, Q&A, and slides not available)"
 
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
