--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -16,7 +16,7 @@
     - name: "15:45 - 16:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf), based on the pre-recorded lectures [Day 1](https://sicss.io/curriculum) or 'Ethics' chapter in the [Bit-by-Bit book by Matthew Salganik](https://www.bitbybitbook.com/). [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md), [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_instructor.md)"
     - name: "16:45 - 17:15 Whole group debrief about the case study"
     - name: "17:15 - 17:30 Break"
-    - name: "17:30 - 18:30 Ivan Smirnov. Common pitfalls in quantitative research. [Slides](https://www.dropbox.com/s/biy3c4zwd8llqqc/Common%20pitfalls%20in%20quantitative%20research.pdf?dl=0) [Video](https://youtu.be/2M5ZqgIb7_s)"
+    - name: "17:30 - 18:30 Ivan Smirnov. Common pitfalls in quantitative research. [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/hse/Ivan%20Smirnov%20Common%20pitfalls%20in%20quantitative%20research.pdf) [Video](https://youtu.be/2M5ZqgIb7_s)"
     - name: "19:00 - 19:15 Debrief and logistics"
 
 - date: 2021-06-15
@@ -58,7 +58,7 @@
     - name: "15:30 - 17:00 Continue participating in the group exercise"
     - name: "17:00 - 17:15 Whole group debrief about the group exercise"
     - name: "17:15 - 17:45 Break"    
-    - name: "17:45 - 18:45 Ivan Smirnov. How to publish a computational social science paper? [Slides](https://www.dropbox.com/s/p2vf02s3wwy2649/How%20to%20write%20a%20computational%20social%20science%20paper.pdf?dl=0) [Video](https://youtu.be/GKktvbAsHUY)"
+    - name: "17:45 - 18:45 Ivan Smirnov. How to publish a computational social science paper? [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/hse/Ivan%20Smirnov%20How%20to%20write%20a%20computational%20social%20science%20paper.pdf) [Video](https://youtu.be/GKktvbAsHUY)"
     
 - date: 2021-06-18
   name: Mass collaboration and machine learning
