--- a/_data/2019/princeton/participants.yml
+++ b/_data/2019/princeton/participants.yml
@@ -28,6 +28,7 @@
 - name: Naniette H. Coleman
   image: /assets/images/nanietteColeman.jpg
   bio: "Naniette H. Coleman is a PhD candidate in the Sociology Department at UC Berkeley. Her work sits at the intersection of the sociology of culture and organizations and focuses on cybersecurity, surveillance, and privacy in the US context. Her research examines how organizations assess risk, make decisions, and respond to data breaches and organizational compliance with state, federal, and international privacy laws. Naniette holds a Master of Public Administration with a specialization in Democracy, Politics, and Institutions from the Harvard Kennedy School of Government, and both an M.A. in Economics and a B.A. in Communication from the University at Buffalo, SUNY. A non-traditional student, Naniette’s prior professional experience includes local, state, and federal service, as well as for two international organizations, and two universities."
+  website: "https://www.naniettecoleman.com/" 
 
 - name: Thomas Davidson
   image: /assets/images/thomasDavidson.jpg
