--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -207,7 +207,7 @@
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) [(Q&A)](https://youtu.be/XX2GRc0SgJM) (slides)"
   - name: "1:00 - 4:00 Work on group projects" 
-  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/lLVOGLDK97o) [(Q&A)](https://youtu.be/DUOl-bGotyc) (slides)"
+  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/lLVOGLDK97o) [(Q&A)](https://youtu.be/DUOl-bGotyc)"
 
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
