+ 2021 data so that post-mortem links display

--- a/_data/2021/beijing/sidebar.yml
+++ b/_data/2021/beijing/sidebar.yml
@@ -8,3 +8,6 @@
   url: "schedule"
 - name: Description in Chinese 
   url: "chinese"
+- name: "Post Mortem"
+  url: "post-mortem"
+  link: '#beijing'
