Rename sample video file

--- a/_data/videos_sample.yml
+++ b/_data/videos_sample.yml
@@ -1,7 +1,7 @@
 - title: Introduction to Computational Social Science
   description_seo: description for seo and card use
   content: Professor Matthew Salganik of Princeton University gives an introduction to the interdisciplinary field of computational social science, which employs digital data sources and machine learning to study human behavior
-  duration: PT8M22S (formatted as an ISO 8601 string)
+  duration: "27:18"
   keywords: key, word, list, for, seo
   programming_lang:
   venue: Duke University
@@ -15,6 +15,7 @@
   is_featured: false
   is_published: true
   has_order: 02
+  preview: https://i.ytimg.com/vi/zGG9wPl1C5E/hqdefault.jpg
   video_url: https://www.youtube.com/watch?v=zGG9wPl1C5E
   embed_url: <iframe width="560" height="315" src="https://www.youtube.com/embed/zGG9wPl1C5E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   materials:
@@ -41,7 +42,7 @@
 - title: Installing R and RStudio
   description_seo: description for seo and card use
   content: Duke Professor Chris Bail explains how to install R and RStudio as part of the coding boot camp for the Summer Institutes in Computational Social Science.
-  duration: PT8M22S (formatted as an ISO 8601 string)
+  duration: "14:01"
   keywords: key, word, list, for, seo
   programming_lang:
   venue: Duke University
@@ -55,6 +56,7 @@
   is_featured: false
   is_published: true
   has_order: 02
+  preview: https://i.ytimg.com/vi/ulIv0NiVTs4/hqdefault.jpg
   video_url: https://www.youtube.com/watch?v=ulIv0NiVTs4
   embed_url: <iframe width="560" height="315" src="https://www.youtube.com/embed/ulIv0NiVTs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   materials:
