update location details

--- a/_data/2022/duke/location.yml
+++ b/_data/2022/duke/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/duke.jpg
-title: Duke
-subtitle: In-person event
+title: Duke University
+subtitle: Durham, North Carolina
 description: "June 19 to June 29, 2022"
 link: duke
 year: 2022
