fixed howard image display

--- a/_data/2022/howard-mathematica/location.yml
+++ b/_data/2022/howard-mathematica/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/howard
+image: /assets/images/howard.jpg
 title: Howard/Mathematica
 subtitle: Howard University
 description: "June 19 to June 29, 2022"
