fixed london image

--- a/_data/2022/london/location.yml
+++ b/_data/2022/london/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/London.jpg
+image: /assets/images/london.jpg
 title: London
 subtitle: UCL
 description: "June 6 to June 19, 2022"
