--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -1,1 +1,2 @@
-- name:
+- name: Eric Giannella
+- bio: Eric Giannella is Data Science Director at Code for America, a nonprofit organization that reduces the gap between the public and private sectors in their effective use of technology and design. He is a social scientist turned data scientist. He’s done research in a variety of settings, spanning government, small and large tech companies, and nonprofits. Most recently, he was at the California Department of Justice working to make data more widely available for the public, journalists, and academics. He has published on social support, justice reform, and technology and society. Eric has a Ph.D. in Sociology from UC Berkeley, and an M.S. and B.A. from Stanford.
