--- a/_data/2022/paris/faculty.yml
+++ b/_data/2022/paris/faculty.yml
@@ -1,1 +1,14 @@
-- name: 
+- name: Etienne Ollion
+  image: /assets/images/EtienneOllion.jpeg
+  bio: Étienne Ollion is a CNRS research fellow and an Professor in Sociology at l’École Polytechnique. His research focuses on politics, and he integrates digital data to more classic data sources and methods.
+  website: www.ollion.cnrs.fr
+  
+- name: Germain Gauthier
+  image: /2019/ethzurich/images/Germain_Gauthier.jpg
+  bio: Germain Gauthier is a PhD candidate at École Polytechnique and a doctoral affiliate at the Institute for Public Policies (IPP). His research interest lies in the formation, persistence, and unravelling of social norms and of beliefs. Relying on social networks, surveys and administrative data, his main focus has been on the evolution of gender norms. 
+  website: https://pinchofdata.github.io/germaingauthier/
+  
+- name: Felix Lennert
+  image: /assets/images/felix_lennert.JPG
+  bio: Felix Lennert is a PhD candidate in Sociology at École Polytechnique under the supervision of Étienne Ollion. He holds an M.Sc. in Computational Social Science from Linköping Universitet. His research interest centers around political polarization and its underlying processes which he studies using large-scale social media data and a diverse toolbox of computational methods.
+  
