--- a/_data/2022/paris/hero.yml
+++ b/_data/2022/paris/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 20 to July 1, 2022 | Polytechnique"
+header_2: "June 20 to July 1, 2022 | Ecole Polytechnique"
 location: "SICSS-Paris"
