--- a/_data/2022/paris/faculty.yml
+++ b/_data/2022/paris/faculty.yml
@@ -1,5 +1,5 @@
 - name: Etienne Ollion
-  image: /assets/images/EtienneOllion.jpeg
+  image: /assets/images/etienne_ollion.png
   bio: Étienne Ollion is a CNRS research fellow and an Professor in Sociology at l’École Polytechnique. His research focuses on politics, and he integrates digital data to more classic data sources and methods.
   website: www.ollion.cnrs.fr
   
