updated Singapore faculty

--- a/_data/2022/singapore/faculty.yml
+++ b/_data/2022/singapore/faculty.yml
@@ -1,1 +1,10 @@
-- name: 
+- name: Subhayan Mukerjee, Ph.D.
+  image: /assets/images/Mukerjee_2022.jpg
+  bio: "Subhayan Mukerjee is an assistant professor at the Department of Communications and New Media, and a principal investigator at the Centre for Trusted Internet and Community at the National University of Singapore. He researches online audiences using computational methods, and teaches courses in quantitative methods, programming, and data visualization." 
+  website: https://www.katalbrecht.org
+  
+
+- name: Jack Linchuan Qiu, Ph.D.
+  image: /assets/images/Jack_2022.jpg
+  bio: "Jack Linchuan Qiu is Professor and Research Director at the Department of Communications and New Media"
+
