updated faculty website

--- a/_data/2022/singapore/faculty.yml
+++ b/_data/2022/singapore/faculty.yml
@@ -1,7 +1,7 @@
 - name: Subhayan Mukerjee, Ph.D.
   image: /assets/images/Mukerjee_2022.jpg
   bio: "Subhayan Mukerjee is an assistant professor at the Department of Communications and New Media, and a principal investigator at the Centre for Trusted Internet and Community at the National University of Singapore. He researches online audiences using computational methods, and teaches courses in quantitative methods, programming, and data visualization." 
-  website: https://www.katalbrecht.org
+  website: https://www.subhayan.com
   
 
 - name: Jack Linchuan Qiu, Ph.D.
