--- a/_data/2022/covenant-university/location.yml
+++ b/_data/2022/covenant-university/location.yml
@@ -1,6 +1,6 @@
-image: /assets/images/nigeria.jpg
-title: Covenant University
-subtitle: Nigeria
-description: "June 17 to June 24, 2022"
+image: /assets/images/covenant_uni.jpg
+title: Nigeria
+subtitle: Covenant University
+description: "June 19 to June 29, 2022"
 link: covenant-university
 year: 2022
